fix Run DB Migration working-directory

--- a/.github/actions/node-deploy-cdk/action.yml
+++ b/.github/actions/node-deploy-cdk/action.yml
@@ -128,7 +128,7 @@ runs:
     - name: Run DB Migrations
       shell: bash
       run: npm run invoke-migrate-db --if-present
-      working-directory: ${{ inputs.working-directory }}/infrastructure
+      working-directory: ${{ inputs.infrastructure-artifact-name }}
 
     - name: CDK deploy app
       shell: bash
