add NODE_AUTH_TOKEN to all build script calls

--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -55,6 +55,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        # CDK infrastructure build calls npm ci on /infrastructure/build, which may fail without NODE_AUTH_TOKEN
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
