feat: support semantic releasing in the node-ci shared configuration

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -41,6 +41,14 @@ on:
         required: false
         type: string
         default: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+      run-semantic-release:
+        required: false
+        type: boolean
+        default: false
+      semantic-release-script:
+        required: false
+        type: string
+        default: npx semantic-release
     secrets:
       npm-auth-token:
         description: NPM auth token (optional, GITHUB_TOKEN is used by default)
@@ -96,5 +104,9 @@ jobs:
         # CDK infrastructure build calls npm ci on /infrastructure/build, which may fail without NODE_AUTH_TOKEN
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm-auth-token || secrets.GITHUB_TOKEN }}
-
-      
+      - name: 'Semantic release'
+        if: ${{ inputs.run-semantic-release }}
+        run: ${{ inputs.semantic-release-script }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.npm-auth-token }}
