--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -88,7 +88,7 @@ jobs:
 
       # run all the CI scripts
       - name: 'Commit lint'
-        if: ${{ run-commit-lint }}
+        if: ${{ inputs.run-commit-lint }}
         run: ${{ inputs.commit-lint-script }}
       - name: Lint
         run: ${{ inputs.lint-script }}
