--- a/.github/workflows/github_zendesk_issue_labelled.yml
+++ b/.github/workflows/github_zendesk_issue_labelled.yml
@@ -1,25 +1,32 @@
-name: Solve zendesk ticket
+name: Create Zendesk ticket
 on:
-  issues:
-    types: [closed]
   workflow_call:
     inputs:
       ZENDESK_TENANT_NAME:
         description: 'The zendesk tenant name, can be found in the URL, for example https://d3v-makerx.zendesk.com/'
         required: true
         type: string
+      ISSUE_LABEL:
+        description: 'The required label to trigger this workflow'
+        required: true
+        type: string
+        default: 'makerx'
     secrets:
       ZENDESK_BASIC_AUTH:
         description: 'The zendesk basic auth token for authentification. See https://support.zendesk.com/hc/en-us/articles/115000510267-How-can-I-authenticate-API-requests-#heading2'
         required: true
 jobs:
-  create-issue:
-    name: Close issue
+  create-ticket:
+    name: Create Zendesk ticket
+    if: github.event.label.name == ${{ inputs.ISSUE_LABEL }}
     runs-on: ubuntu-latest
     steps:
       - env:
           TENANT_NAME: ${{ inputs.ZENDESK_TENANT_NAME || vars.ZENDESK_TENANT_NAME }}
           ZENDESK_BASIC_AUTH: ${{ secrets.ZENDESK_BASIC_AUTH }}
+          ISSUE_TITLE: ${{ github.event.issue.title }}
+          ISSUE_BODY: ${{ github.event.issue.body }}
+          ISSUE_USER: ${{ github.event.issue.user.login }}
           ISSUE_URL: ${{ github.event.issue.html_url }}
         run: |
           ## look up ticket in zendesk
@@ -30,15 +37,23 @@ jobs:
 
           if [[ "$ticket_number" == "null" ]];
           then
-            echo "Skip, Zendesk ticket not found"
-          else
-            ## Set zendesk ticket to solved
-            curl -X PUT https://$TENANT_NAME.zendesk.com/api/v2/tickets/$ticket_number -H "Authorization: Basic $ZENDESK_BASIC_AUTH" -H "Content-Type: application/json" --data-binary @- <<DATA
+            ## create ticket if the lookup failed
+            body=$(jq -n --arg body "$ISSUE_BODY" '{body: $body}' | jq .body)
+            echo "$body"
+
+            curl --silent -X POST https://$TENANT_NAME.zendesk.com/api/v2/tickets -H "Authorization: Basic $ZENDESK_BASIC_AUTH" -H "Content-Type: application/json" --data-binary @- <<DATA
             {
               "ticket": {
-                "comment": { "body": "Closed in GitHub" },
-                "status": "solved"
+                "subject":   "Github_Issue: $ISSUE_TITLE",
+                "comment":   { "body": "[GITHUB_ISSUE_COMMENT]\n\n${body:1:-1}\n\nGITHUB ISSUE URL: $ISSUE_URL" },
+                "external_id": "$ISSUE_URL",
+                "requester": { "locale_id": 1, "name": "$ISSUE_USER from Github", "email": "$ISSUE_USER@users.noreply.github.com" },
+                "status": "open"
               }
             }
           DATA
+
+            echo "Zendesk ticket created"
+          else
+            echo "Ticket exists, no need to create"
           fi
