Add shell and working dir

--- a/.github/actions/build-node-zip/action.yml
+++ b/.github/actions/build-node-zip/action.yml
@@ -80,6 +80,8 @@ runs:
 
     - name: Zip build folder
       run: pushd ${{ inputs.build-path }}; zip -q -r ../${{ inputs.artifact-name }}.zip *
+      working-directory: ${{ inputs.working-directory }}
+      shell: bash
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
