--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -26,46 +26,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash
-        working-directory: ${{ inputs.working-directory }}
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      # setup node + private repo access
-      - name: Use Node.js ${{ inputs.node-version }}
-        uses: actions/setup-node@v3
+      - name: Build
+        uses: ./github/actions/node-build
         with:
           node-version: ${{ inputs.node-version }}
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@makerxstudio'
-          cache: 'npm'
-          cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
-
-      # run npm ci preventing script access to npm auth token
-      - run: npm ci --ignore-scripts
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm-auth-token || secrets.GITHUB_TOKEN }}
-      # allow scripts to run without npm auth token
-      - run: npm rebuild && npm run prepare --if-present
-
-      - name: Prepare
-        run: npm run prepare --if-present
-
-      - name: Build
-        run: npm run build
-        # CDK infrastructure build calls npm ci on /infrastructure/build, which may fail without NODE_AUTH_TOKEN
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.npm-auth-token || secrets.GITHUB_TOKEN }}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: ${{ inputs.artifact-name }}
-          path: ${{ inputs.working-directory }}/${{ inputs.build-path }}
-          if-no-files-found: error
+          working-directory: ${{ inputs.working-directory }}
+          build-path: ${{ inputs.build-path }}
+          artifact-name: ${{ inputs.artifact-name }}
+          npm-auth-token: ${{ secrets.npm-auth-token || secrets.GITHUB_TOKEN }}
