--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -27,6 +27,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout source code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Build
         uses: ./github/actions/node-build
         with:
