--- a/.github/workflows/node-build.yml
+++ b/.github/workflows/node-build.yml
@@ -17,6 +17,9 @@ on:
         required: false
         type: string
         default: node-app
+      pre-run-script:
+        required: false
+        type: string
     secrets:
       npm-auth-token:
         description: NPM auth token (optional, GITHUB_TOKEN is used by default)
@@ -47,6 +50,10 @@ jobs:
           cache: 'npm'
           cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
 
+      - name: Pre-run
+        if: ${{ inputs.pre-run-script }}
+        run: ${{ inputs.pre-run-script }}
+        
       # run npm ci preventing script access to npm auth token
       - run: npm ci --ignore-scripts
         env:
