Change logic to only extract zip files if app-artifact-unzips is provided

--- a/.github/actions/node-deploy-cdk/action.yml
+++ b/.github/actions/node-deploy-cdk/action.yml
@@ -69,7 +69,9 @@ runs:
               replacements+="s/{{$placeholder}}/$(echo $value | sed -e 's/\\/\\\\/g; s/\//\\\//g; s/&/\\\&/g')/gI;"
             fi
           done
-
+        fi
+        if [ ! -z "${{ inputs.app-artifact-unzips }}" ]
+        then
           # Extract app artifacts
           readarray -t lines <<<"${{ inputs.app-artifact-unzips }}"
           for i in "${!lines[@]}"
