[build-docker] Compress Docker images to `.tar.gz` instead of `.zip`

--- a/.github/actions/build-docker/action.yml
+++ b/.github/actions/build-docker/action.yml
@@ -46,7 +46,7 @@ runs:
       run: docker save --output ${{ inputs.image-label }}.tar ${{ inputs.image-label }}:${{ inputs.image-tag }}
 
     - name: Compress docker image
-      run: zip ${{ inputs.image-label }}-docker-image.zip ${{ inputs.image-label }}.tar
+      run: gzip ${{ inputs.image-label }}.tar
       working-directory: ${{ inputs.working-directory }}/
       shell: bash
 
@@ -55,5 +55,5 @@ runs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ inputs.image-label }}-docker-image
-        path: ${{ inputs.working-directory }}/${{ inputs.image-label }}-docker-image.zip
+        path: ${{ inputs.working-directory }}/${{ inputs.image-label }}-docker-image.tar.gz
         if-no-files-found: error
