Fix GitHub action syntax
Fix GitHub action syntax which caused the if condition to be ignored.

--- a/.github/workflows/github_zendesk_issue_labelled.yml
+++ b/.github/workflows/github_zendesk_issue_labelled.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   create-ticket:
     name: Create Zendesk ticket
-    if: github.event.label.name == ${{ inputs.ISSUE_LABEL }}
+    if: github.event.label.name == inputs.ISSUE_LABEL
     runs-on: ubuntu-latest
     steps:
       - env:
